@@ -14,6 +14,7 @@ Fixes:
     and PPC).
     * Portability issue with Eina_Value test suite when unsigned where not promoted to
     unsigned long (case on Itanium).
+    * Fix issue in the XML parser when a tag was in a comment or a CDATA.
 
 Eina 1.2.0
 
